--- a/src/components/Explore/Explore.module.css
+++ b/src/components/Explore/Explore.module.css
@@ -21,9 +21,9 @@ button:hover {
     opacity: 0.9;
 }
 
-.loading {
+.statusText {
     text-align: center;
-    padding: 2rem;
+    padding: 1rem 0;
 }
 
 /* =========================== HEADER =========================== */
@@ -146,6 +146,55 @@ header .mediaTypeToggle button.active {
     font-size: 0.875rem;
 }
 
+/* Skeleton Version */
+.resultsGrid .mediaItemSkeleton {
+    background: var(--color-surface);
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.resultsGrid .mediaItemSkeleton .imageSkeleton {
+    height: 12rem;
+    border-top-left-radius: inherit;
+    border-top-right-radius: inherit;
+    animation: pulse 1.5s ease-in-out infinite;
+}
+
+.resultsGrid .mediaItemSkeleton .mediaInfoSkeleton {
+    padding: 1rem;
+}
+
+.resultsGrid .mediaItemSkeleton .mediaInfoSkeleton div {
+    animation: pulse 1.5s ease-in-out infinite;
+    border-radius: 8px;
+}
+
+.resultsGrid .mediaItemSkeleton .mediaInfoSkeleton .titleSkeleton {
+    width: 55%;
+    height: 1.2rem;
+    margin-bottom: 0.8rem;
+}
+
+.resultsGrid .mediaItemSkeleton .mediaInfoSkeleton .descriptionSkeleton {
+    width: 100%;
+    height: 3rem;
+}
+
+.resultsGrid .mediaItemSkeleton .mediaInfoSkeleton .keywordListSkeleton {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+    margin: 0.5rem 0;
+    animation: none;
+}
+
+.resultsGrid .mediaItemSkeleton .mediaInfoSkeleton .keywordListSkeleton .keywordSkeleton {
+    padding: 0.25rem 0.75rem;
+    border-radius: 1rem;
+    height: 1rem;
+    width: 2rem;
+}
+
 /* =========================== PAGINATION =========================== */
 .pagination {
     margin-bottom: 1.5rem;
@@ -187,5 +236,20 @@ header .mediaTypeToggle button.active {
 @media (min-width: 1024px) {
     .container {
         max-width: 1200px;
+    }
+}
+
+/* =========================== ANIMATIONS =========================== */
+@keyframes pulse {
+    0% {
+        background-color: var(--color-surface);
+    }
+    
+    50% {
+        background-color: rgba(54, 54, 126, 0.8);
+    }
+    
+    100% {
+        background-color: var(--color-surface);
     }
 }
